dclone package versions

Version 0.1-2, April 30, 2009

    * glmexplorer: knows step by select arg.
    * dclone: handles names and got a
      print method.
    * nclones: new function.
    * mat2list: moved to mefa package.
    * lincovtest: moved from abmi package.

Version 0.1-1, April 23, 2009

    * combine method removed (turned out
      to be nonsense)
    * New parser warnings fixed,
      utf-8 encoding used throughout.
    * Initial documentation done.

Version 0.1-0, April 23, 2009

    * Initial bunch of functions released.