@@ -1,0 +1,8 @@
+print.glmexplorer <-
+function(x, ...)
+{
+    attributes(x) <- NULL
+    class(x) <- "list"
+    print(x)
+    invisible(x)
+}
