@@ -2,7 +2,9 @@ dclone package versions
 
 Version 0.1-2, April 30, 2009
 
-    * glmexplorer: knows step by select arg.
+    * print.glmexplorer: new function.
+    * glmexplorer: knows step by select arg,
+      and has y and model attributes.
     * dclone: handles names and got a
       print method.
     * nclones: new function.
